# council_scraper

./: .gitignore  README.md  debug_content.py  demo_data.py  fix_urls.py  main.py  pyproject.toml  test_deep_navigation.py  test_fixes.py  test_hackney_register.py
scraper/: config.py  council_discovery.py  data_extractor.py  data_processor.py  models.py  orchestrator.py  report_generator.py  scraper.py  website_analyzer.py
